<resources>
    <string name="app_name">Home</string>
    <string name="labelapp">LOGIN USER</string>
    <string name="un">Username</string>
    <string name="ps">Password</string>
    <string name="btn">Sign_in</string>
    <string name="hsl">Ini tampilan hasil</string>
    <string name="in_ps">Masukkan password</string>
    <string name="in_un">Masukkan username</string>

    <string name="app1">PENDAFTARAN</string>
    <string name="nm">Nama</string>
    <string name="em">Email</string>
    <string name="no">No Telpon</string>
    <string name="dft">Daftar</string>
    <string name="hint1">Masukkan nama</string>
    <string name="hint2">Masukkan email</string>
    <string name="hint3">Masukkan No telpon</string>
    <string name="hsl2">Tampilan hasil menu 2</string>
    <string name="hsl3">Tampilan hasil menu 3</string>

    //Activity1
    <string name="judul">Pendaftaran</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="tlpn">NO Telepon</string>
    <string name="button">DAFTAR</string>
    <string name="Masukan_Nama">Masukkan Nama</string>
    <string name="MasukanEmail">Masukkan Email</string>
    <string name="MasukanTlpn">Masukan Telpn</string>

    //Activity2
    <string name="Activity2"> Tampilan Hasil Menu 2</string>

    //Activity3
    <string name="Activity3"> Tampilan hasil menu 3</string>
</resources>
