<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/judul"
            android:textAlignment="center"
            android:textColor="@color/judul"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textColor="@color/label"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/masukan_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Masukan_Nama"
                    android:inputType="textPersonName"
                    android:textColor="@color/txt" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/masukan_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/MasukanEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/txt" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tlpn"
                    android:textColor="@color/label"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/MasukanTlpn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/MasukanTlpn"
                    android:inputType="text|phone"
                    android:textColor="@color/txt" />
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/hsltxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="DAFTAR"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn"
                android:layout_width="150dp"
                android:layout_height="49dp"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="0dp"
                android:background="@color/btn"
                android:text="@string/btn" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>